# toot

./: Cargo.toml
i18n/en/: cosmic_ext_toot.ftl
i18n/nl/: cosmic_ext_toot.ftl
src/: app.rs  cache.rs  client.rs  config.rs  error.rs  main.rs  mastodon.rs  persistence.rs  settings.rs  streaming.rs  subscriptions.rs  utils.rs
src/features/: mod.rs
src/features/accounts/: mod.rs
src/features/compose/: mod.rs
src/features/hashtags/: mod.rs
src/features/lists/: mod.rs
src/features/notifications/: fetch.rs  mod.rs  view.rs
src/features/search/: mod.rs
src/features/settings/: mod.rs
src/features/status/: mod.rs
src/features/timeline/: fetch.rs  mod.rs
src/pages/: home.rs  notifications.rs  public.rs
src/subscriptions/: home.rs  notifications.rs  public.rs
src/widgets/: account.rs  notification.rs  status.rs
