[package]
name = "cosmic-ext-toot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/edfloreshz/toot"

[dependencies]
capitalize = "0.3.4"
futures-channel = "0.3.31"
futures-util = "0.3.31"
html2text = "0.13.4"
i18n-embed-fl = "0.9.2"
keytar = "0.1.6"
open = "5.3.0"
reqwest = "0.12.9"
rust-embed = "8.5.0"
thiserror = "2.0.3"
time = "0.3.36"
tracing = "0.1.40"
megalodon = "1.3.0"

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    # About widget for the app
    "about",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # GPU-accelerated rendering
    "wgpu",
]

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Add Wayland support to winit
    "wayland",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
